feat(compiler): reuse published Core and relink incremental declarations